--- a/bower.json
+++ b/bower.json
@@ -22,18 +22,20 @@
     "modernizr": "3.3.1",
     "ng-file-upload": "12.0.4",
     "ngInfiniteScroll": "1.2.2",
-    "swagger-ui": "2.1.4"
+    "swagger-ui": "2.1.4",
+    "Chart.js": "chartjs#^2.1.6",
+    "angular-google-maps": "2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "1.5.5"
   },
   "overrides": {
-    "angular" : {
+    "angular": {
       "dependencies": {
         "jquery": "2.2.4"
       }
     },
-    "angular-cache-buster" : {
+    "angular-cache-buster": {
       "dependencies": {
         "angular": "1.5.5"
       }
